// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminActivateComponent should display admin activation failure if token is invalid 1`] = `
<fcl-admin-activate
  __ngContext__={[Function LRootView]}
  adminTokenValid="false"
  appName={[Function String]}
  name={[Function String]}
>
  <div
    class="fcl-mat-card-content"
  >
    <div
      class="fcl-adminactivate-text"
    >
      <p
        class="mat-subheading-1"
      >
         Your admin activation failed. 
      </p>
      <p
        class="mat-subheading-1"
      >
         Please let the user register again. 
      </p>
    </div>
  </div>
</fcl-admin-activate>
`;

exports[`AdminActivateComponent should display the app name and name if admin token is valid 1`] = `
<fcl-admin-activate
  __ngContext__={[Function LRootView]}
  adminTokenValid={[Function Boolean]}
  appName={[Function String]}
  name={[Function String]}
>
  <div
    class="fcl-mat-card-content"
  >
    <div
      class="fcl-adminactivate-text"
    >
      <p
        class="mat-subheading-1"
      >
        You have activated the testApp account for testName.
      </p>
    </div>
  </div>
</fcl-admin-activate>
`;

exports[`AdminActivateComponent should render the component correctly 1`] = `
<fcl-admin-activate
  __ngContext__={[Function LRootView]}
>
</fcl-admin-activate>
`;
